--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Epic Converter LUAN Arichuna",
   "short_name": "LUAN Conv",
-  "description": "Calculadora Profesional de Cambios LUANSystem",
+  "description": "Calculadora Profesional LUANSystem",
   "start_url": "index.html",
   "display": "standalone",
   "orientation": "portrait",
@@ -9,13 +9,13 @@
   "theme_color": "#ffd700",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2150/2150062.png",
+      "src": "logo.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2150/2150062.png",
+      "src": "logo.png",
       "sizes": "192x192",
       "type": "image/png"
     }
