--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,37 @@
-{
-  "name": "Epic Converter LUAN Arichuna",
-  "short_name": "LUAN Conv",
-  "description": "Calculadora Profesional LUANSystem",
-  "start_url": "index.html",
-  "display": "standalone",
-  "orientation": "portrait",
-  "background_color": "#1a1a2e",
-  "theme_color": "#ffd700",
-  "icons": [
-    {
-      "src": "logo.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "logo.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
-    }
-  ]
-}
+const CACHE_NAME = 'epic-converter-v5';
+const ASSETS = [
+  './',
+  './index.html',
+  './manifest.json',
+  './logo.png'
+];
+
+// Instalación: Guarda los archivos nuevos
+self.addEventListener('install', e => {
+  self.skipWaiting(); 
+  e.waitUntil(
+    caches.open(CACHE_NAME).then(cache => {
+      return cache.addAll(ASSETS);
+    })
+  );
+});
+
+// Activación: Borra la caché vieja (v1, v2, etc.)
+self.addEventListener('activate', e => {
+  e.waitUntil(
+    caches.keys().then(keys => {
+      return Promise.all(
+        keys.filter(key => key !== CACHE_NAME).map(key => caches.delete(key))
+      );
+    })
+  );
+});
+
+// Estrategia: Carga desde caché pero busca red para los precios
+self.addEventListener('fetch', e => {
+  e.respondWith(
+    caches.match(e.request).then(response => {
+      return response || fetch(e.request);
+    })
+  );
+});
